------------------------------------------------------
Release 1 | Beta 2 | Development 1 | Experimental 2

* Added AndroidRenderer

* NOTE: It looks like Android support may take a
  while to come up to the same level as on PC,
  as there are many problems with VBO's and making
  the shaders to work in the same way

------------------------------------------------------
Release 1 | Beta 2 | Development 1 | Experimental 1

* Added ActivityListenerInterface
* Added AndroidDisplay
* Added AndroidDisplayRenderer
* Added BaseActivity
* Added ScreenUtils

* Created the package org.andor.core.android

* WARNING: Prepare for some quite big updates...
  Android Support is coming

------------------------------------------------------
Release 1 | Beta 2 | Development 1 | Experimental 0

* Added Particle
* Added ParticleEffect
* Added ParticleEmitter
* Added BitmapText

------------------------------------------------------
Release 1 | Beta 2 | Development 0 | Experimental 3

* Added BitmapText

* Fixed bug: ParticleEmitter didn't update the
  paricles when emitting was false
* Slight performance increase with ParticleEmittter

------------------------------------------------------
Release 1 | Beta 2 | Development 0 | Experimental 2

* Added 2D support for ParticleEmitter by using
  ignoreZ

------------------------------------------------------
Release 1 | Beta 2 | Development 0 | Experimental 1

* Added Particle
* Added ParticleEffect
* Added ParticleEmitter

------------------------------------------------------
Release 1 | Beta 2 | Development 0 | Experimental 0

* Added ControlBinding
* Added ControlBindingAxis
* Added ControlBindingButton
* Added ControlBindings
* Added ControlInputListener
* Added ControllerRumbler
* Added ClampUtils
* Added FieldScanner
* Added FieldUtils
* Added ImageEntity2D
* Added Animation2D
* Added AnimationTest2D
* Added Audio
* Added AudioLoader
* Added AudioTest

* Fixed bug: MouseEvent didn't assign the right left/ 